# evolution

./: .gitignore  CMakeLists.txt  main.cpp
logic/: logic.cpp  logic.h
renderer/: renderer.cpp  renderer.h
settings/: settings.cpp  settings.h
units/: animal.cpp  animal.h  hunter.cpp  hunter.h  peaceful.cpp  peaceful.h  plant.cpp  plant.h  unit.cpp  unit.h
